# outputguard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MARKETING.md  PROMPT.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 2.0-plan.md  README.md  api.md  batch-processing.md  cli.md  concepts.md  formats.md  getting-started.md  guarded-generation.md  migration-2.0.md  recipes.md  troubleshooting.md
examples/: README.md  basic_usage.py  batch_processing.py  custom_pipeline.py  guarded_generation.py  retry_loop.py
outputguard/: __init__.py  batch.py  cli.py  exceptions.py  formats.py  generation.py  guard.py  models.py  repairer.py  report.py  retry.py  validator.py
outputguard/strategies/: __init__.py  extract_json.py  fix_booleans.py  fix_closers.py  fix_commas.py  fix_ellipsis.py  fix_encoding.py  fix_inner_quotes.py  fix_keys.py  fix_newlines.py  fix_quotes.py  fix_truncated.py  fix_unicode.py  fix_values.py  remove_comments.py  strip_fences.py
tests/: all_model_ids.json  conftest.py  fetch_all_models.py  real_model_runner.py  test_adversarial.py  test_api_contracts.py  test_batch.py  test_cli.py  test_combinations.py  test_coverage_cli.py  test_coverage_core.py  test_coverage_generation.py  test_coverage_strategies.py  test_edge_cases.py  test_exceptions.py  test_formats.py  test_guard.py  test_guarded_generate.py  test_integration.py  test_llm_corpus.py  test_real_models.py  test_repairer.py  test_report.py  test_retry.py  test_strategy_exhaustive.py  test_stress.py  test_validator.py
tests/fixtures/: nested_schema.json  python-test-results.txt  simple_schema.json
tests/fixtures/real_outputs/: ai21__jamba-large-1.7__simple_object.txt  aion-labs__aion-1.0-mini__simple_object.txt  aion-labs__aion-1.0__simple_object.txt  aion-labs__aion-2.0__simple_object.txt  aion-labs__aion-rp-llama-3.1-8b__simple_object.txt  alpindale__goliath-120b__simple_object.txt  amazon__nova-2-lite-v1__simple_object.txt  amazon__nova-micro-v1__simple_object.txt  amazon__nova-premier-v1__simple_object.txt  amazon__nova-pro-v1__simple_object.txt  anthropic__claude-3-haiku__simple_object.txt  anthropic__claude-3.5-haiku__boolean_fields.txt  anthropic__claude-3.5-haiku__enum_values.txt  anthropic__claude-3.5-haiku__large_response.txt  anthropic__claude-3.5-haiku__nested_array.txt  anthropic__claude-3.5-haiku__simple_object.txt  anthropic__claude-3.7-sonnet-thinking__simple_object.txt  anthropic__claude-haiku-4.5__boolean_fields.txt  anthropic__claude-haiku-4.5__enum_values.txt  anthropic__claude-haiku-4.5__large_response.txt  anthropic__claude-haiku-4.5__nested_array.txt  anthropic__claude-haiku-4.5__simple_object.txt  anthropic__claude-opus-4.1__simple_object.txt  anthropic__claude-opus-4.5__simple_object.txt  anthropic__claude-opus-4.6__simple_object.txt  anthropic__claude-opus-4.7__simple_object.txt  anthropic__claude-opus-4__simple_object.txt  anthropic__claude-sonnet-4.5__simple_object.txt  anthropic__claude-sonnet-4.6__boolean_fields.txt  anthropic__claude-sonnet-4.6__large_response.txt  anthropic__claude-sonnet-4.6__nested_array.txt  anthropic__claude-sonnet-4.6__simple_object.txt  anthropic__claude-sonnet-4__boolean_fields.txt  anthropic__claude-sonnet-4__large_response.txt  anthropic__claude-sonnet-4__nested_array.txt  anthropic__claude-sonnet-4__simple_object.txt  arcee-ai__trinity-large-preview__simple_object.txt  arcee-ai__trinity-large-thinking__simple_object.txt  arcee-ai__trinity-mini__simple_object.txt  baidu__ernie-4.5-300b-a47b__simple_object.txt  (+238 more)
tests/test_strategies/: test_extract_json.py  test_fix_booleans.py  test_fix_closers.py  test_fix_commas.py  test_fix_ellipsis.py  test_fix_keys.py  test_fix_newlines.py  test_fix_quotes.py  test_fix_truncated.py  test_fix_unicode.py  test_fix_values.py  test_remove_comments.py  test_strip_fences.py
