[project]
name = "outputguard"
version = "0.2.0"
description = "Validate, repair, and retry LLM structured outputs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["llm", "json", "validation", "repair", "schema", "structured-output"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "jsonschema>=4.20",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/ndcorder/outputguard"
Documentation = "https://github.com/ndcorder/outputguard#readme"
Repository = "https://github.com/ndcorder/outputguard"
Changelog = "https://github.com/ndcorder/outputguard/blob/master/CHANGELOG.md"
Issues = "https://github.com/ndcorder/outputguard/issues"

[project.scripts]
outputguard = "outputguard.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
